[package]
name = "mural_block"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.153"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10.8"

[build-dependencies]
cc = "1.0"  # For build.rs
